fix the collapsed

--- a/src/Layouts/basic-layout/styles.module.scss
+++ b/src/Layouts/basic-layout/styles.module.scss
@@ -27,7 +27,7 @@
 
   .header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 
     .avatar {
